--- a/Site/index.html
+++ b/Site/index.html
@@ -8,12 +8,16 @@
 	  <meta name="description" content="Mitchell Wolfe's Website">
 	  <meta name="author" content="Mitchell Wolfe">
 
-	  <link rel="stylesheet" href="styles/desk.css">
+	  <link rel="stylesheet" href="css/desk.css">
 	</head>
 
 	<body>
-		<img id="logo" class="logo-middle" src="images/letter_logo.png" alt="logo">
-		<span id="site-descriptor"> Hello! My Name is Mitchell Wolfe and I make things </span>
+		<section id="logo-holder" class="spacer">
+			<img id="logo" class="logo-middle" src="images/letter_logo.png" alt="logo">
+		</section>
+		<section id="descriptor-holder" class="spacer">
+			<span id="site-descriptor"> Hello! My Name is Mitchell Wolfe and I make things </span>
+		</section>
 		<nav>
 			<ul>
 				<li><a href="url">Photography</a></li>
@@ -26,15 +30,13 @@
 		</nav>
 		<img id="main-page-image" src="images/start.jpg" alt="">
 		<footer>
-			<section id="links">
-			<ul>
+			<ul id="links">
 				<li id="linkedin"><img src="images/icons/footer/linkedin.png" alt=""></li>
 				<li id="instagram"><img src="images/icons/footer/instagram.png" alt=""></li>
 				<li id="twitter"><img src="images/icons/footer/twitter.png" alt=""></li>
-				<li id="email"><img src="images/icons/footer/email_icon.png" alt=""></li> 
+				<li id="email"><img src="images/icons/footer/email_icon.png" alt=""></li>
+				<li id="copyright"> Site Design and Coding by Mitchell Wolfe </li> 
 			</ul>
-			</section>
-			<span id="copyright"> Site Design and Coding by Mitchell Wolfe </span>
 		</footer>
 	</body>
 </html>
