--- a/Site/index.html
+++ b/Site/index.html
@@ -23,7 +23,7 @@
 				<li><a href="url">Photography</a></li>
 				<li><a href="url">Code</a></li>
 				<li><a href="url">Design</a></li>
-				<li><a href="url">Daily</a></li>
+				<li><a href="pages/daily-overview.html">Daily</a></li>
 				<li><a href="url">Other</a></li>
 				<li><a href="url">About</a></li> 
 			</ul>
@@ -35,8 +35,8 @@
 				<li id="instagram"><img src="images/icons/footer/instagram.png" alt=""></li>
 				<li id="twitter"><img src="images/icons/footer/twitter.png" alt=""></li>
 				<li id="email"><img src="images/icons/footer/email_icon.png" alt=""></li>
-				<li id="copyright"> Site Design and Coding by Mitchell Wolfe </li> 
 			</ul>
+			<span id="copyright"> Site Design and Coding by Mitchell Wolfe </span>
 		</footer>
 	</body>
 </html>
